20. Основное задание: завершаем вёрстку личного проекта.

--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
 					<a class="logo" href="index.html">
 						<img src="img/logo.svg" width="109" height="19" alt="Логотип Техномарт">
 					</a>
-					<form class="search-form search-form-catalog" action="" method="post">
+					<form class="search-form search-form-catalog" method="post">
 						<input type="search" name="search" placeholder="Поиск:">
 					</form>
 					<a class="bookmarks" href="#">Закладки: 0</a>
@@ -71,7 +71,7 @@
 				<div class="choice-wrapper">
 					<section class="filters">
 						<h2>Фильтр:</h2>
-						<form class="filters-manufacturers-form" action="" method="get">
+						<form class="filters-manufacturers-form" method="get">
 							<fieldset>
 								<legend class="filters-type">Цена:</legend>
 								<div class="price-slider">
@@ -267,7 +267,7 @@
 			<div class="top-footer container">
 				<div class="page-footer-contacts">
 					<img class="bottom-logo" src="img/logo.svg" width="138" height="23" alt="Логотип Техномарт">
-					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
+					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
 				</div>
 				<div class="top-footer-wrapper">
 					<ul class="bottom-navigation-list">
@@ -287,7 +287,7 @@
 			</div>
 			<div class="bottom-footer">
 				<div class="bottom-footer-wrapper container">
-					<p class="copyright">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+					<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
 					<div class="social">
 						<ul class="social-list">
 							<li>
@@ -315,10 +315,10 @@
 						</ul>
 					</div>
 					<div class="developer">
-						<p>Обратная связь:<br>
+						<p>Обратная связь:
 							<a href="#">mail@htmlacademy.ru</a>
 						</p>
-						<p>Разработано —<br>
+						<p>Разработано —
 							<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
 						</p>
 					</div>
@@ -327,7 +327,7 @@
 		</footer>
 		
 		<div class="modal modal-information">
-			<button id="close-modal-information"class="modal-close" type="button" aria-label="закрыть окно"></button>
+			<button id="close-modal-information" class="modal-close" type="button" aria-label="закрыть окно"></button>
 			<div class="headline-wrapper">
 				<h2 class="modal-information-headline container-modal">Товар добавлен в корзину!</h2>
 			</div>
