--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<a class="logo">
 						<img src="img/logo.svg" width="109" height="19" alt="Логотип Техномарт">
 					</a>
-					<form class="search-form" action="" method="post">
+					<form class="search-form" method="post">
 						<input type="search" name="search" placeholder="Поиск:">
 					</form>
 					<a class="bookmarks" href="#">Закладки: 0</a>
@@ -28,7 +28,7 @@
 					<p class="telephone">+7 (812) 555-05-55</p>
 					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				</div>
-				<ul class="user-navigation" aria-label="Меню входа пользователя	">
+				<ul class="user-navigation" aria-label="Меню входа пользователя">
 					<li><a class="come-in" href="#">Войти</a></li>
 					<li><a class="check-in" href="#">Регистрация</a></li>
 				</ul>
@@ -101,8 +101,12 @@
 					<h2>Популярные товары:</h2>
 					<a class="button" href="#">Все популярные товары</a>
 				</div>
-				<ul class="catalog-list catalog-list-popular ">
+				<ul class="catalog-list catalog-list-popular">
 					<li class="popular-catalog-item">
+						<div class="actions">
+							<a href="#" class="buy">Купить</a>
+							<a href="#" class="bookmark">В закладки</a>
+						</div>
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 9000</h3>
 						<img src="img/item-image.png" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 						<p class="catalog-item-price">
@@ -111,6 +115,10 @@
 						</p>
 					</li>
 					<li class="popular-catalog-item">
+						<div class="actions">
+							<a href="#" class="buy">Купить</a>
+							<a href="#" class="bookmark">В закладки</a>
+						</div>
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
 						<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 						<p class="catalog-item-price">
@@ -119,6 +127,10 @@
 						</p>
 					</li>
 					<li class="popular-catalog-item">
+						<div class="actions">
+							<a href="#" class="buy">Купить</a>
+							<a href="#" class="bookmark">В закладки</a>
+						</div>
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
 						<img src="img/item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 						<p class="catalog-item-price">
@@ -127,6 +139,10 @@
 						</p>
 					</li>
 					<li class="popular-catalog-item flag-new">
+						<div class="actions">
+							<a href="#" class="buy">Купить</a>
+							<a href="#" class="bookmark">В закладки</a>
+						</div>
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
 						<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
 						<p class="catalog-item-price">
@@ -155,7 +171,7 @@
 			<section class="services">
 				<div class="container clearfix">
 					<h2>Сервисы</h2>
-					<p>Хороший интернет-магазин отличается от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+					<p>Хороший интернет-магазин отличается от плохого не только ценами!Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 					<div class="services-wrapper">
 						<ul class="services-list">
 							<li><a class="service-delivery-item services-item services-item-current" href="#">Доставка</a></li>
@@ -168,7 +184,7 @@
 						</div>
 						<div class="service-warranty">
 							<h3>Гарантия</h3>
-							<p>Если купленный у нас товар поломается или заискрит, <br>а также в случае пожара, спровоцированного его возгаранием, <br>вы всегда можете быть уверены в нашей гарантии. <br>Мы обменяем сгоревший товар на новый. <br>Дом уж восстановите как-нибудь сами.</p>
+							<p>Если купленный у нас товар поломается или заискрит, <br>а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br>Дом уж восстановите как-нибудь сами.</p>
 						</div>
 						<div class="service-credit">
 							<h3>Кредит</h3>
@@ -182,8 +198,7 @@
 				<div class="company">
 					<h3>Компания «Техномарт»</h3>
 					<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-					<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-					Техномарт работает со многими транспортными компаниями: </p>
+					<p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями: </p>
 					<ul class="transport-companies-list">
 						<li class="transport-companies-item">Деловые линии</li>
 						<li class="transport-companies-item">Автотрейдинг</li>
@@ -193,8 +208,7 @@
 				</div>
 				<div class="map">
 					<h3>Контакты</h3>
-					<p>Вы можете забрать товар сами,<br>
-					заехав в наш офис:</p>
+					<p>Вы можете забрать товар сами, заехав в наш офис:</p>
 					<a class="map-oll" href="#">
 						<img src="img/map.jpg" width="300" height="158" alt="Карта">
 					</a>
@@ -206,7 +220,7 @@
 			<div class="top-footer container">
 				<div class="page-footer-contacts">
 					<img class="bottom-logo" src="img/logo.svg" width="138" height="23" alt="Логотип Техномарт">
-					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
+					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
 				</div>
 				<div class="top-footer-wrapper">
 					<ul class="bottom-navigation-list">
@@ -226,7 +240,7 @@
 			</div>
 			<div class="bottom-footer">
 				<div class="bottom-footer-wrapper container">
-					<p class="copyright">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+					<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
 					<div class="social">
 						<ul class="social-list">
 							<li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span>
@@ -248,10 +262,10 @@
 						</ul>
 					</div>
 					<div class="developer">
-						<p>Обратная связь:<br>
+						<p>Обратная связь:
 							<a href="#">mail@htmlacademy.ru</a>
 						</p>
-						<p>Разработано —<br>
+						<p>Разработано —
 							<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
 						</p>
 					</div>
@@ -262,7 +276,7 @@
 		<section class="modal modal-letter">
 			<button class="modal-close" type="button" aria-label="закрыть окно">Закрыть</button>
 			<h2 class="visually-hidden">Напишите нам</h2>
-			<form class="modal-letter-form" action="" method="post">
+			<form class="modal-letter-form" method="post">
 				<div class="modal-letter-wrapper">
 					<div class="user-field">
 						<label for="user-name">Ваше имя:</label>
