исправил базовые критерии

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 			<section class="catalog-offers  container">
 				<div class="catalog-goods">
 					<ul class="catalog-goods-list">
-						<li class="catalog-goods-item  materials-item flag-new">
+						<li class="catalog-goods-item materials-item flag-new">
 							<h3>Материалы</h3>
 							<a href="#">На любой вкус</a>
 						</li>
-						<li class="catalog-goods-item  tool-item">
+						<li class="catalog-goods-item tool-item">
 							<h3>Инструмент</h3>
 							<a href="#">На все случаи</a>
 						</li>
-						<li class="catalog-goods-item  equipment-item">
+						<li class="catalog-goods-item equipment-item">
 							<h3>Техника</h3>
 							<a href="#">Для стройки</a>
 						</li>
@@ -89,7 +89,7 @@
 							<h3>Скидки 50%</h3>
 							<a href="#">На 350 товаров</a>
 						</li>
-						<li class="catalog-goods-item  delivery-item">
+						<li class="catalog-goods-item delivery-item">
 							<h3>Доставка</h3>
 							<a href="#">Бесплатно</a>
 						</li>
@@ -158,14 +158,14 @@
 					<a class="button" href="#">Все производители</a>
 				</div>
 				<ul class="manufacturers">
-					<li><a href="#" class="bosch"><img src="img/bosch.png" alt="bosch"></a></li>
-					<li><a href="#" class="makita"><img src="img/makita.png" alt="makita"></a></li>
-					<li><a href="#" class="de-walt"><img src="img/de-walt.png" alt="de-walt"></a></li>
-					<li><a href="#" class="interscol"><img src="img/interscol.png" alt="интерскол"></a></li>
-					<li><a href="#" class="hitachi"><img src="img/hitachi.png" alt="hitachi"></a></li>
-					<li><a href="#" class="lg"><img src="img/lg.png" alt="lg"></a></li>
-					<li><a href="#" class="aeg"><img src="img/aeg.png" alt="aeg"></a></li>
-					<li><a href="#" class="metabo"><img src="img/metabo.png" alt="metabo"></a></li>
+					<li><a href="#" class="bosch"><img src="img/bosch.png" width="126" height="37" alt="bosch"></a></li>
+					<li><a href="#" class="makita"><img src="img/makita.png" width="123" height="40" alt="makita"></a></li>
+					<li><a href="#" class="de-walt"><img src="img/de-walt.png" width="146" height="44" alt="de-walt"></a></li>
+					<li><a href="#" class="interscol"><img src="img/interscol.png" width="200" height="88" alt="интерскол"></a></li>
+					<li><a href="#" class="hitachi"><img src="img/hitachi.png" width="169" height="31" alt="hitachi"></a></li>
+					<li><a href="#" class="lg"><img src="img/lg.png" width="121" height="73" alt="lg"></a></li>
+					<li><a href="#" class="aeg"><img src="img/aeg.png" width="151" height="96" alt="aeg"></a></li>
+					<li><a href="#" class="metabo"><img src="img/metabo.png" width="204" height="69" alt="metabo"></a></li>
 				</ul>
 			</section>
 			<section class="services">
@@ -272,7 +272,7 @@
 				</div>
 			</div>
 		</footer>
-		
+
 		<section class="modal modal-letter">
 			<button class="modal-close" type="button" aria-label="закрыть окно">Закрыть</button>
 			<h2 class="visually-hidden">Напишите нам</h2>
@@ -296,7 +296,7 @@
 				</div>
 			</form>
 		</section>
-		
+
 		<div class="modal modal-map">
 			<div class="modal-map-wrapper">
 				<h2 class="visually-hidden">Карта</h2>
