--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 			<div class="header-center  container">
-				<h1>Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
+				<h1>Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
 				<div class="contacts">
 					<p class="telephone">+7 (812) 555-05-55</p>
 					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -325,7 +325,7 @@
 				</div>
 			</div>
 		</footer>
-		
+
 		<div class="modal modal-information">
 			<button id="close-modal-information" class="modal-close" type="button" aria-label="закрыть окно"></button>
 			<div class="headline-wrapper">
